Added the Toast message and finished the rest of the errors

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="emailError">No email detected</string>
     <string name="passwordError">No password detected</string>
     <string name="passwordConfirmError">No password confirm detected</string>
+    <string name="passwordMatch">Passwords do not match</string>
+
 </resources>
